# serializer version: 1
# name: TestDirectStrategy.test_direct_scalar[datetime-event]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 2   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 3   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 4   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 5   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 57  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 58  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 59  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 60  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestDirectStrategy.test_direct_scalar[datetime-interval]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 2   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 3   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 4   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 5   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 57  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 58  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 59  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 60  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestDirectStrategy.test_direct_scalar[datetime-state]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 2   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 3   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 4   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 5   ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 57  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 58  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 59  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  │ 60  ┆ 2000-06-01 00:00:00 ┆ 0                 │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestDirectStrategy.test_direct_scalar[timestep-event]
  shape: (60, 3)
  ┌─────┬──────┬───────────────────┐
  │ id  ┆ _T0_ ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---  ┆ ---               │
  │ i64 ┆ f64  ┆ u32               │
  ╞═════╪══════╪═══════════════════╡
  │ 1   ┆ 42.0 ┆ 0                 │
  │ 2   ┆ 42.0 ┆ 0                 │
  │ 3   ┆ 42.0 ┆ 0                 │
  │ 4   ┆ 42.0 ┆ 0                 │
  │ 5   ┆ 42.0 ┆ 0                 │
  │ …   ┆ …    ┆ …                 │
  │ 56  ┆ 42.0 ┆ 0                 │
  │ 57  ┆ 42.0 ┆ 0                 │
  │ 58  ┆ 42.0 ┆ 0                 │
  │ 59  ┆ 42.0 ┆ 0                 │
  │ 60  ┆ 42.0 ┆ 0                 │
  └─────┴──────┴───────────────────┘
# ---
# name: TestDirectStrategy.test_direct_scalar[timestep-interval]
  shape: (60, 3)
  ┌─────┬──────┬───────────────────┐
  │ id  ┆ _T0_ ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---  ┆ ---               │
  │ i64 ┆ f64  ┆ u32               │
  ╞═════╪══════╪═══════════════════╡
  │ 1   ┆ 42.0 ┆ 0                 │
  │ 2   ┆ 42.0 ┆ 0                 │
  │ 3   ┆ 42.0 ┆ 0                 │
  │ 4   ┆ 42.0 ┆ 0                 │
  │ 5   ┆ 42.0 ┆ 0                 │
  │ …   ┆ …    ┆ …                 │
  │ 56  ┆ 42.0 ┆ 0                 │
  │ 57  ┆ 42.0 ┆ 0                 │
  │ 58  ┆ 42.0 ┆ 0                 │
  │ 59  ┆ 42.0 ┆ 0                 │
  │ 60  ┆ 42.0 ┆ 0                 │
  └─────┴──────┴───────────────────┘
# ---
# name: TestDirectStrategy.test_direct_scalar[timestep-state]
  shape: (60, 3)
  ┌─────┬──────┬───────────────────┐
  │ id  ┆ _T0_ ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---  ┆ ---               │
  │ i64 ┆ f64  ┆ u32               │
  ╞═════╪══════╪═══════════════════╡
  │ 1   ┆ 42.0 ┆ 0                 │
  │ 2   ┆ 42.0 ┆ 0                 │
  │ 3   ┆ 42.0 ┆ 0                 │
  │ 4   ┆ 42.0 ┆ 0                 │
  │ 5   ┆ 42.0 ┆ 0                 │
  │ …   ┆ …    ┆ …                 │
  │ 56  ┆ 42.0 ┆ 0                 │
  │ 57  ┆ 42.0 ┆ 0                 │
  │ 58  ┆ 42.0 ┆ 0                 │
  │ 59  ┆ 42.0 ┆ 0                 │
  │ 60  ┆ 42.0 ┆ 0                 │
  └─────┴──────┴───────────────────┘
# ---
# name: TestFeatureStrategy.test_feature_from_static_column[datetime-event]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-05 00:00:00 ┆ 0                 │
  │ 2   ┆ 2000-05-20 00:00:00 ┆ 0                 │
  │ 3   ┆ 2000-06-17 00:00:00 ┆ 0                 │
  │ 4   ┆ 2000-12-29 00:00:00 ┆ 0                 │
  │ 5   ┆ 2000-10-20 00:00:00 ┆ 0                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestFeatureStrategy.test_feature_from_static_column[datetime-interval]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-05 00:00:00 ┆ 0                 │
  │ 2   ┆ 2000-05-20 00:00:00 ┆ 0                 │
  │ 3   ┆ 2000-06-17 00:00:00 ┆ 0                 │
  │ 4   ┆ 2000-12-29 00:00:00 ┆ 0                 │
  │ 5   ┆ 2000-10-20 00:00:00 ┆ 0                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestFeatureStrategy.test_feature_from_static_column[datetime-state]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-05 00:00:00 ┆ 0                 │
  │ 2   ┆ 2000-05-20 00:00:00 ┆ 0                 │
  │ 3   ┆ 2000-06-17 00:00:00 ┆ 0                 │
  │ 4   ┆ 2000-12-29 00:00:00 ┆ 0                 │
  │ 5   ┆ 2000-10-20 00:00:00 ┆ 0                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestFeatureStrategy.test_feature_from_static_column[timestep-event]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 278.0 ┆ 0                 │
  │ 2   ┆ 140.0 ┆ 0                 │
  │ 3   ┆ 168.0 ┆ 0                 │
  │ 4   ┆ 363.0 ┆ 0                 │
  │ 5   ┆ 293.0 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestFeatureStrategy.test_feature_from_static_column[timestep-interval]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 278.0 ┆ 0                 │
  │ 2   ┆ 140.0 ┆ 0                 │
  │ 3   ┆ 168.0 ┆ 0                 │
  │ 4   ┆ 363.0 ┆ 0                 │
  │ 5   ┆ 293.0 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestFeatureStrategy.test_feature_from_static_column[timestep-state]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 278.0 ┆ 0                 │
  │ 2   ┆ 140.0 ┆ 0                 │
  │ 3   ┆ 168.0 ┆ 0                 │
  │ 4   ┆ 363.0 ┆ 0                 │
  │ 5   ┆ 293.0 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_anchor_end[datetime-interval]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-22 23:59:59 ┆ 1                 │
  │ 2   ┆ 2000-06-16 23:59:59 ┆ 0                 │
  │ 3   ┆ 2000-07-08 23:59:59 ┆ 0                 │
  │ 4   ┆ 2001-01-27 23:59:59 ┆ 0                 │
  │ 5   ┆ 2000-11-05 23:59:59 ┆ 0                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_anchor_end[datetime-state]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-13 00:00:00 ┆ 1                 │
  │ 2   ┆ 2000-06-17 00:00:00 ┆ 1                 │
  │ 3   ┆ 2000-07-29 00:00:00 ┆ 1                 │
  │ 4   ┆ 2001-01-30 00:00:00 ┆ 1                 │
  │ 5   ┆ 2000-11-08 00:00:00 ┆ 1                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_anchor_end[timestep-interval]
  shape: (60, 3)
  ┌─────┬────────────┬───────────────────┐
  │ id  ┆ _T0_       ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---        ┆ ---               │
  │ i64 ┆ f64        ┆ u32               │
  ╞═════╪════════════╪═══════════════════╡
  │ 1   ┆ 295.999988 ┆ 1                 │
  │ 2   ┆ 167.999988 ┆ 0                 │
  │ 3   ┆ 189.999988 ┆ 0                 │
  │ 4   ┆ 392.999988 ┆ 0                 │
  │ 5   ┆ 309.999988 ┆ 0                 │
  │ …   ┆ …          ┆ …                 │
  │ 56  ┆ null       ┆ null              │
  │ 57  ┆ null       ┆ null              │
  │ 58  ┆ null       ┆ null              │
  │ 59  ┆ null       ┆ null              │
  │ 60  ┆ null       ┆ null              │
  └─────┴────────────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_anchor_end[timestep-state]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 286.0 ┆ 1                 │
  │ 2   ┆ 168.0 ┆ 1                 │
  │ 3   ┆ 210.0 ┆ 1                 │
  │ 4   ┆ 395.0 ┆ 1                 │
  │ 5   ┆ 312.0 ┆ 1                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_anchor_middle[datetime-interval]
  shape: (60, 3)
  ┌─────┬─────────────────────────┬───────────────────┐
  │ id  ┆ _T0_                    ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                     ┆ ---               │
  │ i64 ┆ datetime[μs]            ┆ u32               │
  ╞═════╪═════════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-13 23:59:59.500 ┆ 1                 │
  │ 2   ┆ 2000-06-02 23:59:59.500 ┆ 0                 │
  │ 3   ┆ 2000-06-27 23:59:59.500 ┆ 0                 │
  │ 4   ┆ 2001-01-12 23:59:59.500 ┆ 0                 │
  │ 5   ┆ 2000-10-28 11:59:59.500 ┆ 0                 │
  │ …   ┆ …                       ┆ …                 │
  │ 56  ┆ null                    ┆ null              │
  │ 57  ┆ null                    ┆ null              │
  │ 58  ┆ null                    ┆ null              │
  │ 59  ┆ null                    ┆ null              │
  │ 60  ┆ null                    ┆ null              │
  └─────┴─────────────────────────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_anchor_middle[datetime-state]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-09 00:00:00 ┆ 0                 │
  │ 2   ┆ 2000-06-03 00:00:00 ┆ 0                 │
  │ 3   ┆ 2000-07-08 00:00:00 ┆ 0                 │
  │ 4   ┆ 2001-01-14 00:00:00 ┆ 0                 │
  │ 5   ┆ 2000-10-29 12:00:00 ┆ 0                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_anchor_middle[timestep-interval]
  shape: (60, 3)
  ┌─────┬────────────┬───────────────────┐
  │ id  ┆ _T0_       ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---        ┆ ---               │
  │ i64 ┆ f64        ┆ u32               │
  ╞═════╪════════════╪═══════════════════╡
  │ 1   ┆ 286.999994 ┆ 1                 │
  │ 2   ┆ 153.999994 ┆ 0                 │
  │ 3   ┆ 178.999994 ┆ 0                 │
  │ 4   ┆ 377.999994 ┆ 0                 │
  │ 5   ┆ 301.499994 ┆ 0                 │
  │ …   ┆ …          ┆ …                 │
  │ 56  ┆ null       ┆ null              │
  │ 57  ┆ null       ┆ null              │
  │ 58  ┆ null       ┆ null              │
  │ 59  ┆ null       ┆ null              │
  │ 60  ┆ null       ┆ null              │
  └─────┴────────────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_anchor_middle[timestep-state]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 282.0 ┆ 0                 │
  │ 2   ┆ 154.0 ┆ 0                 │
  │ 3   ┆ 189.0 ┆ 0                 │
  │ 4   ┆ 379.0 ┆ 0                 │
  │ 5   ┆ 302.5 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_last_row[datetime-event]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2001-01-08 00:00:00 ┆ 7                 │
  │ 2   ┆ 2000-08-26 00:00:00 ┆ 5                 │
  │ 3   ┆ 2000-11-08 00:00:00 ┆ 5                 │
  │ 4   ┆ 2001-03-12 00:00:00 ┆ 3                 │
  │ 5   ┆ 2000-12-13 00:00:00 ┆ 3                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_last_row[datetime-interval]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2001-01-08 00:00:00 ┆ 7                 │
  │ 2   ┆ 2000-08-26 00:00:00 ┆ 5                 │
  │ 3   ┆ 2000-11-08 00:00:00 ┆ 5                 │
  │ 4   ┆ 2001-03-12 00:00:00 ┆ 3                 │
  │ 5   ┆ 2000-12-13 00:00:00 ┆ 3                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_last_row[datetime-state]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2001-01-08 00:00:00 ┆ 7                 │
  │ 2   ┆ 2000-08-26 00:00:00 ┆ 5                 │
  │ 3   ┆ 2000-11-08 00:00:00 ┆ 5                 │
  │ 4   ┆ 2001-03-12 00:00:00 ┆ 3                 │
  │ 5   ┆ 2000-12-13 00:00:00 ┆ 3                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_last_row[timestep-event]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 373.0 ┆ 7                 │
  │ 2   ┆ 238.0 ┆ 5                 │
  │ 3   ┆ 312.0 ┆ 5                 │
  │ 4   ┆ 436.0 ┆ 3                 │
  │ 5   ┆ 347.0 ┆ 3                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_last_row[timestep-interval]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 373.0 ┆ 7                 │
  │ 2   ┆ 238.0 ┆ 5                 │
  │ 3   ┆ 312.0 ┆ 5                 │
  │ 4   ┆ 436.0 ┆ 3                 │
  │ 5   ┆ 347.0 ┆ 3                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_last_row[timestep-state]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 373.0 ┆ 7                 │
  │ 2   ┆ 238.0 ┆ 5                 │
  │ 3   ┆ 312.0 ┆ 5                 │
  │ 4   ┆ 436.0 ┆ 3                 │
  │ 5   ┆ 347.0 ┆ 3                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_zero[datetime-event]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-05 00:00:00 ┆ 0                 │
  │ 2   ┆ 2000-05-20 00:00:00 ┆ 0                 │
  │ 3   ┆ 2000-06-17 00:00:00 ┆ 0                 │
  │ 4   ┆ 2000-12-29 00:00:00 ┆ 0                 │
  │ 5   ┆ 2000-10-20 00:00:00 ┆ 0                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_zero[datetime-interval]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-05 00:00:00 ┆ 0                 │
  │ 2   ┆ 2000-05-20 00:00:00 ┆ 0                 │
  │ 3   ┆ 2000-06-17 00:00:00 ┆ 0                 │
  │ 4   ┆ 2000-12-29 00:00:00 ┆ 0                 │
  │ 5   ┆ 2000-10-20 00:00:00 ┆ 0                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_zero[datetime-state]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-05 00:00:00 ┆ 0                 │
  │ 2   ┆ 2000-05-20 00:00:00 ┆ 0                 │
  │ 3   ┆ 2000-06-17 00:00:00 ┆ 0                 │
  │ 4   ┆ 2000-12-29 00:00:00 ┆ 0                 │
  │ 5   ┆ 2000-10-20 00:00:00 ┆ 0                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_zero[timestep-event]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 278.0 ┆ 0                 │
  │ 2   ┆ 140.0 ┆ 0                 │
  │ 3   ┆ 168.0 ┆ 0                 │
  │ 4   ┆ 363.0 ┆ 0                 │
  │ 5   ┆ 293.0 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_zero[timestep-interval]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 278.0 ┆ 0                 │
  │ 2   ┆ 140.0 ┆ 0                 │
  │ 3   ┆ 168.0 ┆ 0                 │
  │ 4   ┆ 363.0 ┆ 0                 │
  │ 5   ┆ 293.0 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestPositionStrategy.test_position_zero[timestep-state]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 278.0 ┆ 0                 │
  │ 2   ┆ 140.0 ┆ 0                 │
  │ 3   ┆ 168.0 ┆ 0                 │
  │ 4   ┆ 363.0 ┆ 0                 │
  │ 5   ┆ 293.0 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_anchor_end[datetime-interval]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-11-17 23:59:59 ┆ 3                 │
  │ 2   ┆ null                ┆ null              │
  │ 3   ┆ 2000-10-10 23:59:59 ┆ 3                 │
  │ 4   ┆ 2001-03-09 23:59:59 ┆ 2                 │
  │ 5   ┆ null                ┆ null              │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_anchor_end[datetime-state]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-31 00:00:00 ┆ 3                 │
  │ 2   ┆ null                ┆ null              │
  │ 3   ┆ 2000-10-12 00:00:00 ┆ 4                 │
  │ 4   ┆ 2001-03-12 00:00:00 ┆ 3                 │
  │ 5   ┆ null                ┆ null              │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_anchor_end[timestep-interval]
  shape: (60, 3)
  ┌─────┬────────────┬───────────────────┐
  │ id  ┆ _T0_       ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---        ┆ ---               │
  │ i64 ┆ f64        ┆ u32               │
  ╞═════╪════════════╪═══════════════════╡
  │ 1   ┆ 372.999988 ┆ 6                 │
  │ 2   ┆ 178.999988 ┆ 2                 │
  │ 3   ┆ 236.999988 ┆ 1                 │
  │ 4   ┆ 422.999988 ┆ 1                 │
  │ 5   ┆ 309.999988 ┆ 0                 │
  │ …   ┆ …          ┆ …                 │
  │ 56  ┆ null       ┆ null              │
  │ 57  ┆ null       ┆ null              │
  │ 58  ┆ null       ┆ null              │
  │ 59  ┆ null       ┆ null              │
  │ 60  ┆ null       ┆ null              │
  └─────┴────────────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_anchor_end[timestep-state]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 373.0 ┆ 7                 │
  │ 2   ┆ 172.0 ┆ 2                 │
  │ 3   ┆ 254.0 ┆ 2                 │
  │ 4   ┆ 423.0 ┆ 2                 │
  │ 5   ┆ 312.0 ┆ 1                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_first_match[datetime-event]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-25 00:00:00 ┆ 2                 │
  │ 2   ┆ null                ┆ null              │
  │ 3   ┆ 2000-09-30 00:00:00 ┆ 3                 │
  │ 4   ┆ 2001-02-27 00:00:00 ┆ 2                 │
  │ 5   ┆ null                ┆ null              │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_first_match[datetime-interval]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-25 00:00:00 ┆ 2                 │
  │ 2   ┆ null                ┆ null              │
  │ 3   ┆ 2000-09-30 00:00:00 ┆ 3                 │
  │ 4   ┆ 2001-02-27 00:00:00 ┆ 2                 │
  │ 5   ┆ null                ┆ null              │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_first_match[datetime-state]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2000-10-25 00:00:00 ┆ 2                 │
  │ 2   ┆ null                ┆ null              │
  │ 3   ┆ 2000-09-30 00:00:00 ┆ 3                 │
  │ 4   ┆ 2001-02-27 00:00:00 ┆ 2                 │
  │ 5   ┆ null                ┆ null              │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_first_match[timestep-event]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 344.0 ┆ 6                 │
  │ 2   ┆ 168.0 ┆ 1                 │
  │ 3   ┆ 210.0 ┆ 1                 │
  │ 4   ┆ 395.0 ┆ 1                 │
  │ 5   ┆ 293.0 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_first_match[timestep-interval]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 344.0 ┆ 6                 │
  │ 2   ┆ 168.0 ┆ 1                 │
  │ 3   ┆ 210.0 ┆ 1                 │
  │ 4   ┆ 395.0 ┆ 1                 │
  │ 5   ┆ 293.0 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_first_match[timestep-state]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 344.0 ┆ 6                 │
  │ 2   ┆ 168.0 ┆ 1                 │
  │ 3   ┆ 210.0 ┆ 1                 │
  │ 4   ┆ 395.0 ┆ 1                 │
  │ 5   ┆ 293.0 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_last_match[datetime-event]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2001-01-08 00:00:00 ┆ 7                 │
  │ 2   ┆ null                ┆ null              │
  │ 3   ┆ 2000-09-30 00:00:00 ┆ 3                 │
  │ 4   ┆ 2001-02-27 00:00:00 ┆ 2                 │
  │ 5   ┆ null                ┆ null              │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_last_match[datetime-interval]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2001-01-08 00:00:00 ┆ 7                 │
  │ 2   ┆ null                ┆ null              │
  │ 3   ┆ 2000-09-30 00:00:00 ┆ 3                 │
  │ 4   ┆ 2001-02-27 00:00:00 ┆ 2                 │
  │ 5   ┆ null                ┆ null              │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_last_match[datetime-state]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2001-01-08 00:00:00 ┆ 7                 │
  │ 2   ┆ null                ┆ null              │
  │ 3   ┆ 2000-09-30 00:00:00 ┆ 3                 │
  │ 4   ┆ 2001-02-27 00:00:00 ┆ 2                 │
  │ 5   ┆ null                ┆ null              │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_last_match[timestep-event]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 344.0 ┆ 6                 │
  │ 2   ┆ 172.0 ┆ 2                 │
  │ 3   ┆ 210.0 ┆ 1                 │
  │ 4   ┆ 395.0 ┆ 1                 │
  │ 5   ┆ 293.0 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_last_match[timestep-interval]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 344.0 ┆ 6                 │
  │ 2   ┆ 172.0 ┆ 2                 │
  │ 3   ┆ 210.0 ┆ 1                 │
  │ 4   ┆ 395.0 ┆ 1                 │
  │ 5   ┆ 293.0 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestQueryStrategy.test_query_last_match[timestep-state]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 344.0 ┆ 6                 │
  │ 2   ┆ 172.0 ┆ 2                 │
  │ 3   ┆ 210.0 ┆ 1                 │
  │ 4   ┆ 395.0 ┆ 1                 │
  │ 5   ┆ 293.0 ┆ 0                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestT0DataOutput.test_columns[datetime-event]
  list([
    'id',
    '_T0_',
    '_T0_NEAREST_RANK_',
  ])
# ---
# name: TestT0DataOutput.test_columns[datetime-interval]
  list([
    'id',
    '_T0_',
    '_T0_NEAREST_RANK_',
  ])
# ---
# name: TestT0DataOutput.test_columns[datetime-state]
  list([
    'id',
    '_T0_',
    '_T0_NEAREST_RANK_',
  ])
# ---
# name: TestT0DataOutput.test_columns[timestep-event]
  list([
    'id',
    '_T0_',
    '_T0_NEAREST_RANK_',
  ])
# ---
# name: TestT0DataOutput.test_columns[timestep-interval]
  list([
    'id',
    '_T0_',
    '_T0_NEAREST_RANK_',
  ])
# ---
# name: TestT0DataOutput.test_columns[timestep-state]
  list([
    'id',
    '_T0_',
    '_T0_NEAREST_RANK_',
  ])
# ---
# name: TestT0Overwrite.test_second_set_t0_replaces[datetime-event]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2001-01-08 00:00:00 ┆ 7                 │
  │ 2   ┆ 2000-08-26 00:00:00 ┆ 5                 │
  │ 3   ┆ 2000-11-08 00:00:00 ┆ 5                 │
  │ 4   ┆ 2001-03-12 00:00:00 ┆ 3                 │
  │ 5   ┆ 2000-12-13 00:00:00 ┆ 3                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestT0Overwrite.test_second_set_t0_replaces[datetime-interval]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2001-01-08 00:00:00 ┆ 7                 │
  │ 2   ┆ 2000-08-26 00:00:00 ┆ 5                 │
  │ 3   ┆ 2000-11-08 00:00:00 ┆ 5                 │
  │ 4   ┆ 2001-03-12 00:00:00 ┆ 3                 │
  │ 5   ┆ 2000-12-13 00:00:00 ┆ 3                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestT0Overwrite.test_second_set_t0_replaces[datetime-state]
  shape: (60, 3)
  ┌─────┬─────────────────────┬───────────────────┐
  │ id  ┆ _T0_                ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---                 ┆ ---               │
  │ i64 ┆ datetime[μs]        ┆ u32               │
  ╞═════╪═════════════════════╪═══════════════════╡
  │ 1   ┆ 2001-01-08 00:00:00 ┆ 7                 │
  │ 2   ┆ 2000-08-26 00:00:00 ┆ 5                 │
  │ 3   ┆ 2000-11-08 00:00:00 ┆ 5                 │
  │ 4   ┆ 2001-03-12 00:00:00 ┆ 3                 │
  │ 5   ┆ 2000-12-13 00:00:00 ┆ 3                 │
  │ …   ┆ …                   ┆ …                 │
  │ 56  ┆ null                ┆ null              │
  │ 57  ┆ null                ┆ null              │
  │ 58  ┆ null                ┆ null              │
  │ 59  ┆ null                ┆ null              │
  │ 60  ┆ null                ┆ null              │
  └─────┴─────────────────────┴───────────────────┘
# ---
# name: TestT0Overwrite.test_second_set_t0_replaces[timestep-event]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 373.0 ┆ 7                 │
  │ 2   ┆ 238.0 ┆ 5                 │
  │ 3   ┆ 312.0 ┆ 5                 │
  │ 4   ┆ 436.0 ┆ 3                 │
  │ 5   ┆ 347.0 ┆ 3                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestT0Overwrite.test_second_set_t0_replaces[timestep-interval]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 373.0 ┆ 7                 │
  │ 2   ┆ 238.0 ┆ 5                 │
  │ 3   ┆ 312.0 ┆ 5                 │
  │ 4   ┆ 436.0 ┆ 3                 │
  │ 5   ┆ 347.0 ┆ 3                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
# name: TestT0Overwrite.test_second_set_t0_replaces[timestep-state]
  shape: (60, 3)
  ┌─────┬───────┬───────────────────┐
  │ id  ┆ _T0_  ┆ _T0_NEAREST_RANK_ │
  │ --- ┆ ---   ┆ ---               │
  │ i64 ┆ f64   ┆ u32               │
  ╞═════╪═══════╪═══════════════════╡
  │ 1   ┆ 373.0 ┆ 7                 │
  │ 2   ┆ 238.0 ┆ 5                 │
  │ 3   ┆ 312.0 ┆ 5                 │
  │ 4   ┆ 436.0 ┆ 3                 │
  │ 5   ┆ 347.0 ┆ 3                 │
  │ …   ┆ …     ┆ …                 │
  │ 56  ┆ null  ┆ null              │
  │ 57  ┆ null  ┆ null              │
  │ 58  ┆ null  ┆ null              │
  │ 59  ┆ null  ┆ null              │
  │ 60  ┆ null  ┆ null              │
  └─────┴───────┴───────────────────┘
# ---
